# Mercenary

./: .gitignore  LICENSE  Makefile  README.md  build.bat  mercenary.ebnf  requirements.md  testing.merc  tokens.txt
examples/: fizzbuzz.merc  greet.merc  guessing-game.merc  lexer-test.merc  using-everything.merc
examples/knight/: functions.merc  main.merc  parse.merc  utils.merc  value.merc  variable.merc
src/: lexer.asm  main.c
src/codegen/: ast.cpp  ast.hpp  instructions.cpp  instructions.hpp  main  main.cpp  middle_end.cpp  middle_end.hpp
src/lexer/: lexer.asm  lexer.h  lexer_arm64.s  main.c
src/parser/: ast-free.c  ast-visit.c  ast-visit.h  ast.c  ast.h  dyn_array.h  main.c  parser.c  parser.h  pp.c  pp.h
src/runtime/: Cargo.toml
src/runtime/glue/: Cargo.toml  build.rs
src/runtime/glue/src/: codegen-glue.cpp  ctypes.rs  lib.rs
src/runtime/merc/: Cargo.toml
src/runtime/merc/src/: main.rs
src/runtime/src/: instruction.rs  intrinsics.rs  lib.rs  operators.rs  runtime.rs  value.rs
